# ABBA-Python

./: .gitignore  0. Register And Save State.ipynb  1. Open State.ipynb  2. Register To BrainGlobe Atlas.ipynb  3. Open State and Use Transforms.ipynb  4. Register QuPath Project.ipynb  ABBA-Transform-Adult Mouse Brain - Allen Brain Atlas V3.json  ABBA.bat  MANIFEST.in  Playground - Adding a python registration method.ipynb  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  run-abba-pyimagej.py  test-itk.py
Brainrender/: getting_started.ipynb
abba/: Abba.py  __init__.py
abba/abba_private/: AbbaAtlas.py  AbbaAtlasNode.py  AbbaMap.py  AbbaOntology.py  DeepSliceProcessor.py  __init__.py
abba/itk/: abba_itk.py
constructor/: LICENCE.txt  README.md  TODO.txt  construct.yaml  post_install_unix.sh  post_install_win.bat  prepare_win.bat
deepslice/: DeepSlice.py  __init__.py
notebooks/: 0. Register And Save State.ipynb  1. Open State.ipynb  2. Register To BrainGlobe Atlas.ipynb  3. Open State and Use Transforms.ipynb  4. Register QuPath Project.ipynb  ABBA - BrainGlobe.ipynb  ABBA - DeepSlice.ipynb  ABBA-BrainGlobe.ipynb  ABBA-DeepSlice.ipynb  ABBA-Transforms.ipynb  BrainGlobeAPIExplore.ipynb  DeepSlice.py  DeepSliceInstall.ipynb  Playground - Adding a python registration method.ipynb  environment.yml
scijava_python_command/: ScijavaJupyterUI.py  __init__.py  jupyter_ui.py
src/: 0. Register And Save State.ipynb  1. Open State.ipynb  2. Register To BrainGlobe Atlas.ipynb  3. Open State and Use Transforms.ipynb  run-abba-pyimagej.py  run-abba.py
(+54 files in other folders)
