[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abba-python"
version = "0.1.4"
description = "Aligning Big Brains and Atlases, ran from Python"
readme = "README.md"
authors = [{ name = "BIOP", email = "biop@epfl.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ABBA", "QuPath", "BrainGlobe", "Allen Brain Atlas"]

dependencies = [
        "numpy>==1.21.6",
        "pandas>=1.3.5",
        "protobuf>=4.21.7",
        "scikit-image>=0.17.2",
        "scikit-learn>=0.23.2",
        "scipy>=1.6.0",
        "tensorflow==1.14.0",
        "tqdm>=4.56.0",
        "pyimagej>=1.2.1",
        "xarray>=0.20.2",
        "h5py==2.10.0",
        "bg-atlasapi>=1.0.2",
        "openssl==1.1.1q",
        "openjdk==8",
        "netcdf4==1.5.7"]

requires-python = "<3.9"

[project.urls]
Homepage = "https://github.com/NicoKiaru/ABBA-Python"